Bug ZK-2359: Autopaging causes flickering of list

--- a/zul/src/archive/web/js/zul/sel/less/listbox.less
+++ b/zul/src/archive/web/js/zul/sel/less/listbox.less
@@ -354,6 +354,10 @@
 		width: 100%;
 	}
 }
+.z-listbox-autopaging .z-listcell-content {
+	height: 30px;
+	overflow: hidden;
+}
 //column menu
 .z-listhead-menugrouping .z-menuitem-image {
 	.encodeThemeURL(background-image, '~./zul/img/grid/menu-group.png');
