--- a/zul/src/archive/web/js/zul/sel/less/tree.less
+++ b/zul/src/archive/web/js/zul/sel/less/tree.less
@@ -241,6 +241,13 @@
 		width: 100%;
 	}
 }
+.z-tree-autopaging .z-treecell-content,
+.z-dottree-autopaging .z-treecell-content,
+.z-filetree-autopaging .z-treecell-content,
+.z-vfiletree-autopaging .z-treecell-content {
+	height: 30px;
+	overflow: hidden;
+}
 // ZK-2151: use strict selector to prevent nest problem
 // IE8
 .ie8 {
